--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "mockjs": "^1.1.0",
+    "swiper": "^5.4.5",
     "vue": "^2.6.11",
+    "vue-awesome-swiper": "^4.1.1",
     "vue-axios": "^3.2.4",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
@@ -31,7 +33,6 @@
     "eslint-plugin-vue": "^6.2.2",
     "stylus": "^0.54.7",
     "stylus-loader": "^3.0.2",
-    "vue-awesome-swiper": "^4.1.1",
     "vue-cookie": "^1.1.4",
     "vue-lazyload": "^1.3.3",
     "vue-template-compiler": "^2.6.11"
